--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,16 @@ before_install:
 
 script:
   - docker run -e CI=true ilhom7/docker-react npm run test
+
+deploy: 
+provider: elasticbeanstalk
+region: 'us-east-2'
+app: 'docker-react'
+evn: 'Dockerreact-env'
+bucket_name: 'elasticbeanstalk-us-east-2-602804680080'
+bucket_path: 'docker-react'
+on:
+  branch: master
+
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_KEY
